[gd_scene load_steps=3 format=3 uid="uid://b7vkwgg7gmvmf"]

[ext_resource type="Texture2D" uid="uid://cjpbbe1faqlct" path="res://assets/sound.svg" id="1_50arl"]
[ext_resource type="Script" path="res://audio/sound_mixer.gd" id="1_lbu2b"]

[node name="SoundMixer" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 35.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_lbu2b")

[node name="SoundButton" type="Button" parent="."]
layout_mode = 0
offset_left = -1.0
offset_right = 32.0
offset_bottom = 33.0
focus_mode = 0
toggle_mode = true
icon = ExtResource("1_50arl")
icon_alignment = 1
expand_icon = true

[node name="SoundSlider" type="HSlider" parent="."]
visible = false
layout_mode = 0
offset_left = 34.0
offset_top = 3.0
offset_right = 133.0
offset_bottom = 34.0
focus_mode = 0
min_value = -24.0
max_value = 12.0
step = 0.5

[connection signal="pressed" from="SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="drag_ended" from="SoundSlider" to="." method="_on_sound_slider_drag_ended"]
